sort out some design

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <!-- Try adding some custom CSS -->
     <style type="text/tailwindcss">
         @theme {
-          --color-clifford: #da373d;
-          --color-p-greeny-black: #777777;
-          --color-h1-black: #1C1C1C;
           --font-poppins: "Poppins", "sans-serif"; 
         }
       </style>
@@ -38,7 +35,7 @@
                 <div class="flex items-center gap-2">
                     <div class="flex gap-2 bg-slate-100 px-4 py-2 rounded-4xl">
                         <img src="./assests/right-mark-image.png" width="15" height="15" alt="">
-                        <p id="total-task-completed">23</p>
+                        <p id="total-task-completed" class="font-bold">23</p>
                     </div>
                     <div class="w-10 rounded-full">
                         <img alt="Tailwind CSS Navbar component" src="./assests/bg-color-changing-button.png" width="80"
@@ -63,15 +60,15 @@
                         </div>
 
                         <a href="faq-blog.html"
-                            class="w-6/12 flex items-center justify-center bg-gradient-to-l from-[#9BA8F8] to-[#3752FD] px-5 py-3 rounded-2xl gap-4">
+                            class="w-6/12 flex items-center justify-center bg-gradient-to-l from-[#9BA8F8] to-[#3752FD] px-10 py-3 rounded-2xl gap-6">
                             <img src="./assests/calender-image-for-discover-div.png" width="35" height="35" alt="">
                             <div class="w-full">
-                                <p class="text-[10px] text-white">Discover Something <br> New Today!</p>
+                                <p class="text-[12px] text-white font-semibold">Discover Something <br> New Today!</p>
                             </div>
                         </a>
 
                         <div id="task-assigned-card"
-                            class="w-3/12 flex items-center justify-center bg-blue-100 px-4 py-2 rounded-2xl gap-4">
+                            class="w-3/12 flex items-center justify-center bg-blue-100 px-4 py-3 rounded-2xl gap-4 ">
                             <img src="./assests/calender-icon-image -date-time.png" width="35" height="35" alt="">
                             <div class="w-full">
                                 <p id="todays-day-date" class="text-[10px]">Wed ,<br><span class="font-bold">Jul 28
