All the isuses and requirements are done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body id="body-container" class="bg-blue-100 min-h-screen">
-    <section id="body-section-container" class="max-w-7xl mx-auto px-3 md:px-5 space-y-4 py-[20px]">
+    <section id="body-section-container" class="container mx-auto px-3 md:px-5 space-y-4 py-[20px]">
         <!-- Header Section -->
         <header class="pt-4">
             <div class="navbar bg-base-100 shadow-sm rounded-2xl">
@@ -188,7 +188,7 @@
             <!-- Aside Section -->
             <aside class="w-full lg:w-3/12 h-auto bg-base-100 shadow-sm rounded-2xl mb-10 hover:shadow-2xl transition-shadow">
                 <div id="task-assigned-card"
-                    class="w-full flex flex-col items-center justify-center px-4 py-4 rounded-xl gap-2  min-h-[92px]">
+                    class="w-full flex flex-col items-center justify-center px-4 py-4 rounded-xl gap-2  min-h-[93px]">
                     <div class="flex  gap-2">
                         <img src="./assests/activity-log-history-icon-24-24.png" width="16" height="16" alt="">
                         <p class="text-[10px]">Activity Log</p>
