--- a/faq-blog.html
+++ b/faq-blog.html
@@ -61,7 +61,7 @@
 </head>
 
 <body id="body-container" class="bg-blue-100 min-h-screen">
-    <section id="body-section-container" class="max-w-7xl mx-auto px-3 md:px-5 space-y-4 py-[20px]">
+    <section id="body-section-container" class="container mx-auto px-3 md:px-5 space-y-4 py-[20px]">
         <!-- Header Section -->
         <header class="pt-4">
             <div class="navbar bg-base-100 shadow-sm rounded-2xl">
