--- a/faq-blog.html
+++ b/faq-blog.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevBoard- Task Management Project</title>
+    <!-- Favicon Links -->
+    <link rel="icon" type="image/png" href="./assests/main-logo.png">
     <!-- DaisyUI and Tailwind CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
